[gd_scene load_steps=9 format=2]

[ext_resource path="res://entity/fighters/punchy_guy/PunchyGuy.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/CombatUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://level/Arena.gd" type="Script" id=3]
[ext_resource path="res://level/basic_arena/res/tile.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 128 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 128 )

[sub_resource type="TileSet" id=4]
0/name = "tile.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="TestingArena" type="Node2D"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="CombatUI" parent="UI" instance=ExtResource( 2 )]

[node name="Collision" type="Node2D" parent="."]

[node name="FloorArea" type="StaticBody2D" parent="Collision"]
position = Vector2( 0, 10 )

[node name="FloorCollision" type="CollisionShape2D" parent="Collision/FloorArea"]
shape = SubResource( 1 )

[node name="LeftWallArea" type="StaticBody2D" parent="Collision"]
position = Vector2( -256, -128 )

[node name="LeftWallCollision" type="CollisionShape2D" parent="Collision/LeftWallArea"]
shape = SubResource( 2 )

[node name="RightWallArea" type="StaticBody2D" parent="Collision"]
position = Vector2( 256, -128 )

[node name="RightWallCollision" type="CollisionShape2D" parent="Collision/RightWallArea"]
shape = SubResource( 3 )

[node name="Camera" type="Camera2D" parent="."]
offset = Vector2( 0, -32 )
current = true
zoom = Vector2( 0.15, 0.15 )

[node name="Player1" parent="." instance=ExtResource( 1 )]
position = Vector2( -54, -52 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 46, -54 )
player_number = 2
controller = 1
full_name = "Punching Bag"

[node name="Floor" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65513, 0, 0, 65514, 0, 0, 65515, 0, 0, 65516, 0, 0, 65517, 0, 0, 65518, 0, 0, 65519, 0, 0, 65520, 0, 0, 65521, 0, 0, 65522, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0 )

[connection signal="round_over" from="UI/CombatUI" to="." method="_on_round_draw"]
